Finalized layout, added first post

--- a/index_mockup.html
+++ b/index_mockup.html
@@ -28,7 +28,8 @@
 		</div>
 		<div class="content">
 			<div class="article">
-				<h2>First article title</h2>
+				<a href="#"><h2>First article title</h2></a>
+				<p class="postinfo">Posted on 7-9-2014 by Adrian Biagioli</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eros massa, bibendum vel felis nec, bibendum laoreet neque. Donec pharetra gravida massa non ultrices. Ut tempus nisl nec est laoreet varius. Maecenas sit amet libero id justo accumsan posuere. Aliquam egestas tortor in ante egestas, nec tincidunt nibh bibendum. Morbi malesuada dui elit, id tempor libero convallis eget. Proin id mi elementum nisi vulputate sodales. Curabitur mollis mi eget ligula pharetra, in rhoncus turpis ultrices.
 
 Sed vehicula lacus eget odio laoreet feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur sed ipsum leo. Pellentesque bibendum magna nisl, quis sollicitudin metus rhoncus nec. Pellentesque rhoncus dignissim est non lacinia. Nullam sit amet neque a odio tempor gravida ut vel leo. Suspendisse pharetra, lacus quis sollicitudin blandit, justo odio commodo justo, a fermentum magna odio quis orci.
@@ -38,8 +39,10 @@ Sed vitae hendrerit leo, eu adipiscing nibh. Maecenas dapibus risus placerat arc
 				<br />
 				<a href="#">&raquo; read more</a>
 			</div>
+			<br />
 			<div class="article">
-				<h2>Second article title</h2>
+				<a href="#"><h2>Second article title</h2></a>
+				<p class="postinfo">Posted on 7-9-2014 by Adrian Biagioli</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eros massa, bibendum vel felis nec, bibendum laoreet neque. Donec pharetra gravida massa non ultrices. Ut tempus nisl nec est laoreet varius. Maecenas sit amet libero id justo accumsan posuere. Aliquam egestas tortor in ante egestas, nec tincidunt nibh bibendum. Morbi malesuada dui elit, id tempor libero convallis eget. Proin id mi elementum nisi vulputate sodales. Curabitur mollis mi eget ligula pharetra, in rhoncus turpis ultrices.
 
 Sed vehicula lacus eget odio laoreet feugiat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur sed ipsum leo. Pellentesque bibendum magna nisl, quis sollicitudin metus rhoncus nec. Pellentesque rhoncus dignissim est non lacinia. Nullam sit amet neque a odio tempor gravida ut vel leo. Suspendisse pharetra, lacus quis sollicitudin blandit, justo odio commodo justo, a fermentum magna odio quis orci.
