--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@ title: adrian's soapbox
 				{% endif %}
 				{% endfor %}
 				{% endif %}
+				{% if post.project-posted-date != null %}
+				Completed on {{ post.date | date_to_long_string }}, Posted on {{ post.project-posted-date }} by {{ post.author }}
+				{% else %}
 				Posted on {{ post.date | date_to_long_string }} by {{ post.author }}
+				{% endif %}
 				</p>
 				{{ post.content | split:'<!--break-->' | first }}
 				{% if post.content contains '<!--break-->' %}
