Add attribution notice to Rotation-Vis

--- a/demos/Rotation-Vis/index.html
+++ b/demos/Rotation-Vis/index.html
@@ -18,5 +18,7 @@
     <div style="position: absolute; left: calc(50% - 480px);">
       <div id="unityContainer" style="width: 960px; height: 600px; margin: auto"></div>
     </div>
+    <br />
+    <p style="text-align: center; position: relative; font-family: 'Open Sans', sans-serif; color: #eee; top: 600px"><b>Attribution: </b>3D Models in this demo were gathered from the <a href="https://casual-effects.com/data/">McGuire Computer Graphics Archive</a>.<br /><br /></p>
   </body>
 </html>
