Add more links to the steam page

--- a/steam/index.html
+++ b/steam/index.html
@@ -83,6 +83,9 @@
 			<input type="text" name="q" autocomplete="off" value="" placeholder="Search DuckDuckGo (Enter to Search)" />
 		</form>
 	</center>
+	<a href="https://gamefaqs.gamespot.com">GameFAQs</a> | 
+	<a href="http://news.ycombinator.com">Hacker News</a> |
+	<a href="https://2048game.com">2048</a>
 	<div class="game" id="csgo">
 		<h2>CS:GO</h2>
 		<ul>
@@ -92,7 +95,7 @@
 				</ul>
 			</li>
 			<li><a href="https://reddit.com/r/globaloffensive">/r/globaloffensive</a></li>
-			<li><a href="https://csgostats.gg/player/76561198029345998">Stats</a></li>
+			<li><a href="https://csgostats.gg/player/76561198029345998">CSGOStats</a> | <a href="https://leetify.com">Leetify</a></li>
 		</ul>
 		<button onclick="document.getElementById('buy-binds').classList.toggle('hidden')">Buy Binds</button><br/>
 		<table id="buy-binds" class="hidden">
@@ -124,6 +127,10 @@
 				<td><span class="key">.</span>Armor</td>
 			</tr>
 		</table>
+	</div>
+	<div class="game" id="ffxiii-2">
+		<h2>Final Fantasy XIII-2</h2>
+		<a href="https://gamefaqs.gamespot.com/pc/846193-final-fantasy-xiii-2/faqs/63854">Krystal109 Guide</a>
 	</div>
 	<div class="game" id="utils">
 		<h2>Tools</h2>
