Update FF section of steam page

--- a/steam/index.html
+++ b/steam/index.html
@@ -128,9 +128,12 @@
 			</tr>
 		</table>
 	</div>
-	<div class="game" id="ffxiii-2">
-		<h2>Final Fantasy XIII-2</h2>
-		<a href="https://gamefaqs.gamespot.com/pc/846193-final-fantasy-xiii-2/faqs/63854">Krystal109 Guide</a>
+	<div class="game" id="ff">
+		<h2>Final Fantasy</h2>
+		<ul>
+			<li><a href="https://gamefaqs.gamespot.com/ps/197341-final-fantasy-vii/faqs/71240">VII Guide (bover_87)</a></li>
+			<li><a href="https://gamefaqs.gamespot.com/pc/846193-final-fantasy-xiii-2/faqs/63854">XIII-2 Guide (Krystal109)</a></li>
+		</ul>
 	</div>
 	<div class="game" id="utils">
 		<h2>Tools</h2>
