[steam] Change sothatwemaybefree to csgonades

--- a/steam/index.html
+++ b/steam/index.html
@@ -89,13 +89,13 @@
 	<div class="game" id="csgo">
 		<h2>CS:GO</h2>
 		<ul>
-			<li><a href="https://sothatwemaybefree.com/">Nade Guides (sothatwemaybefree)</a>
+			<li><a href="https://www.csgonades.com/">Nade Guides (csgonades)</a>
 				<ul>
-					<li><a href="http://sothatwemaybefree.com/map/de_mirage">Mirage</a> | <a href="http://sothatwemaybefree.com/map/de_inferno"> Inferno</a> | <a href="http://sothatwemaybefree.com/map/de_overpass">Overpass</a> | <a href="http://sothatwemaybefree.com/map/de_vertigo">Vertigo</a> | <a href="http://sothatwemaybefree.com/map/de_nuke">Nuke</a> | <a href="http://sothatwemaybefree.com/map/de_train">Train</a> | <a href="http://sothatwemaybefree.com/map/de_dust2">Dust2</a> | <a href="http://sothatwemaybefree.com/map/de_cache">Cache</a></li>
+					<li><a href="https://www.csgonades.com/maps/mirage">Mirage</a> | <a href="https://www.csgonades.com/maps/inferno"> Inferno</a> | <a href="https://www.csgonades.com/maps/overpass">Overpass</a> | <a href="https://www.csgonades.com/maps/vertigo">Vertigo</a> | <a href="https://www.csgonades.com/maps/nuke">Nuke</a> | <a href="https://www.csgonades.com/maps/train">Train</a> | <a href="https://www.csgonades.com/maps/dust2">Dust2</a> | <a href="https://www.csgonades.com/maps/ancient">Ancient</a> | <a href="https://www.csgonades.com/maps/cache">Cache</a></li>
 				</ul>
 			</li>
 			<li><a href="https://reddit.com/r/globaloffensive">/r/globaloffensive</a></li>
-			<li><a href="https://csgostats.gg/player/76561198029345998">CSGOStats</a> | <a href="https://leetify.com">Leetify</a></li>
+			<li><a href="https://csgostats.gg/player/76561198029345998">CSGOStats</a> | <a href="https://leetify.com">Leetify</a> | <a href="https://scope.gg">scope.gg</a></li>
 		</ul>
 		<button onclick="document.getElementById('buy-binds').classList.toggle('hidden')">Buy Binds</button><br/>
 		<table id="buy-binds" class="hidden">
