add ffx to steam

--- a/steam/index.html
+++ b/steam/index.html
@@ -132,6 +132,7 @@
 		<h2>Final Fantasy</h2>
 		<ul>
 			<li><a href="https://gamefaqs.gamespot.com/ps/197341-final-fantasy-vii/faqs/71240">VII Guide (bover_87)</a></li>
+			<li><a href="https://gamefaqs.gamespot.com/ps4/102484-final-fantasy-x-x-2-hd-remaster/faqs/79145">X Guide (bover_87)</a> <a href="https://ffxindex.com/">ffxindex</a></li>
 			<li><a href="https://gamefaqs.gamespot.com/pc/846193-final-fantasy-xiii-2/faqs/63854">XIII-2 Guide (Krystal109)</a></li>
 		</ul>
 	</div>
